--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "formik": "^2.1.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.6"
+    "redux-form": "^8.3.6",
+    "simple-react-validator": "^1.5.0",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
